[project]
name = "ezmsg-rerun"
version = "0.1.0"
description = "ezmsg extension for rerun visualization."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["rerun-sdk>=0.18.0", "ezmsg>=3.4.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ezmsg"]

[tool.uv]
dev-dependencies = [
    "ezmsg-sigproc>=1.2.3",
]
