[project]
name = "ezmsg-rerun"
dynamic = ["version"]
description = "ezmsg extension for rerun visualization."
authors = [{ name = "Preston Peranich", email = "pperanich@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10.15"
dependencies = ["rerun-sdk>=0.18.0", "ezmsg>=3.6.0"]
license = { file = "LICENSE.txt" }

[dependency-groups]
dev = [
    "ezmsg-sigproc>=2.4.1",
    "pre-commit>=4.5.0",
    {include-group = "lint"},
    {include-group = "test"},
    {include-group = "docs"},
]
lint = [
    "ruff>=0.14.9",
]
test = [
    "pytest>=9.0.2",
]
docs = [
    "myst-parser>=4.0.1",
    "pydata-sphinx-theme>=0.16.1",
    "sphinx>=8.1.3",
    "sphinx-autodoc-typehints>=3.0.1",
    "sphinx-copybutton>=0.5.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.2",
]
dev = [
    "ezmsg-sigproc>=1.5.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/ezmsg/rerun/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/ezmsg"]

[tool.uv.sources]
# Uncomment to use development version of ezmsg from git
#ezmsg = { git = "https://github.com/ezmsg-org/ezmsg.git", branch = "dev" }
